Some minor changes + removed 7zip.