@@ -29,21 +29,13 @@ If you **prefer not to use the UI**, you can use the **PowerShell-based tweak me
 3. **Double-click `RunTweaks.bat`**, and it will launch the tweak menu automatically.
 
 ### Manually Running the PowerShell Script
-If you prefer, you can run the script manually:
 
-1. Open PowerShell and navigate to the script directory:
+```powershell
+cd "C:\Path\To\PleaseTweakWindows"
+powershell.exe -ExecutionPolicy Bypass -File .\PleaseTweakWindowsPScript.ps1
+```
 
-   ```powershell
-   cd "C:\Path\To\PleaseTweakWindows"
-   ```
-
-2. Run the script with execution policy bypass:
-
-   ```powershell
-   powershell.exe -ExecutionPolicy Bypass -File .\PleaseTweakWindowsPScript.ps1
-   ```
-
-3. Follow the on-screen prompts to apply or revert tweaks by entering **Y (Yes) or N (No)**.
+Follow the on-screen prompts to apply or revert tweaks by entering **Y (Yes) or N (No)**.
 
 This method ensures that **no installation is required**, making it ideal for **users who want a quick, UI-free experience**.
 
@@ -53,7 +45,6 @@ This method ensures that **no installation is required**, making it ideal for **
 If you prefer to build the project yourself, follow these steps. All commands assume a Windows environment.
 
 ### Clone the Repository
-Open a command prompt or PowerShell and run:
 
 ```bash
 git clone https://github.com/26zl/PleaseTweakWindows.git
@@ -61,7 +52,6 @@ cd PleaseTweakWindows
 ```
 
 ### Build the Project
-Use the Maven Wrapper to build:
 
 ```batch
 mvnw clean package
@@ -70,20 +60,28 @@ mvnw clean package
 This command generates the necessary artifacts in the `target` folder. The `target` folder is automatically re-created during each build and is typically excluded from version control.
 
 ### Run the Application (Using Installed Java)
-If you have Java installed globally, you can run the JAR file with:
 
 ```batch
 java -jar target/PleaseTweakWindows-1.0-SNAPSHOT.jar
 ```
 
 ### Run the Application (Using Custom Runtime)
-If you want to run the application using the custom runtime, use the following command:
 
 ```powershell
 & "C:\Users\user\Documents\PleaseTweakWindows\custom-runtime\bin\java.exe" -jar "C:\Users\user\Documents\PleaseTweakWindows\target\PleaseTweakWindows-1.0-SNAPSHOT.jar"
 ```
 
 This method allows the application to run on a machine without requiring a full Java installation.
+
+---
+
+## Create Custom Runtime with jlink
+
+```batch
+jlink --module-path "%JAVA_HOME%\jmods;C:\Users\Lenti\Documents\javafx-sdk-17.0.14\jmods" --add-modules java.base,javafx.controls,javafx.graphics,javafx.base,java.logging --output C:\Users\user\Documents\PleaseTweakWindows\custom-runtime --strip-debug --compress=2 --no-header-files --no-man-pages
+```
+
+This will generate the `custom-runtime` folder expected by the build scripts.
 
 ---
 
@@ -94,18 +92,16 @@ A batch script is provided to automate the creation of the EXE installer. This s
 - Creates an app image using `jpackage`.
 - Copies external scripts into a `scripts` folder directly under the generated app image.
 - Creates an EXE installer with an upgrade UUID so that a new installation automatically overwrites an existing one.
-- Zips the installer output directly into the project folder.
+- Uses Windows built-in `tar.exe` to zip the installer output directly into the project folder.
 - Removes the standalone EXE so that only the ZIP file remains.
 
 ### Prerequisites
 - Java 21 (or a compatible version with jpackage) must be installed.
 - JavaFX SDK and Jmods from [GluonHQ](https://gluonhq.com/products/javafx/).
 - Install the WiX Toolset from [WiX Toolset Releases](https://wixtoolset.org/releases/) and ensure `candle.exe` and `light.exe` are in your PATH.
-- 7‑Zip must be installed (with the executable at the specified path).
 - Ensure your project folder structure matches the paths in the script.
 
 ### Running the Script
-Run the provided batch script from the project root:
 
 ```batch
 Build.bat
